save/display username

--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="root"></div>
 
+    <script src="%PUBLIC_URL%/js/jquery-3.2.1.min.js"></script>
+    <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
   </body>
 </html>
